manifest/demoteam/custom-cpu-org-mem-resource-requirements/prod/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: custom-cpu-org-mem-resource-requirements
    env: prod
    team: demoteam
  name: custom-cpu-org-mem-resource-requirements
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: custom-cpu-org-mem-resource-requirements
        env: prod
    spec:
      securityContext: {}
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        resources:
          requests:
            cpu: '2'
            memory: 3Gi
          limits:
            cpu: '4'
            memory: 6Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: custom-cpu-org-mem-resource-requirements
      env: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: custom-cpu-org-mem-resource-requirements
    env: prod
    team: demoteam
  name: custom-cpu-org-mem-resource-requirements
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: custom-cpu-org-mem-resource-requirements.prod.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: custom-cpu-org-mem-resource-requirements
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: custom-cpu-org-mem-resource-requirements
    env: prod
    team: demoteam
  name: custom-cpu-org-mem-resource-requirements
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: custom-cpu-org-mem-resource-requirements
    env: prod
    team: demoteam
